# DummyChelloWorld

./: CMakeLists.txt  hello.cpp  hello.h  main.cpp  myShared.cpp  myShared.h
