cmake_minimum_required(VERSION 3.4)
project(helloWorld)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
ADD_LIBRARY(hello SHARED hello.cpp hello.h)
set(SOURCE_FILES main.cpp)
add_executable(helloWorld ${SOURCE_FILES})
INSTALL(TARGETS hello DESTINATION lib)
TARGET_LINK_LIBRARIES(helloWorld hello)
TARGET_INCLUDE_DIRECTORIES(helloWorld PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
INSTALL(TARGETS helloWorld DESTINATION bin)